--- a/projects/otp-verification/tsconfig.lib.json
+++ b/projects/otp-verification/tsconfig.lib.json
@@ -28,5 +28,13 @@
   "exclude": [
     "src/test.ts",
     "**/*.spec.ts"
-  ]
+  ],
+  "paths": {
+    "otp-verification": [
+      "dist/otp-verification"
+    ],
+    "otp-verification/*": [
+      "dist/otp-verification/*"
+    ]
+  }
 }
